<resources>
    <string name="BaseDatos"> Base de datos</string>
    <string name="Graficos"> Graficos</string>
    <string name="Animacion"> Animacion</string>
    <string name="Recursividad"> Cantor </string>
    <string name="Calculadora"> Calculadora</string>
    <string name="Salir"> Salir</string>

    <string name="num0">0</string>
    <string name="num1">1</string>
    <string name="num2">2</string>
    <string name="num3">3</string>
    <string name="num4">4</string>
    <string name="num5">5</string>
    <string name="num6">6</string>
    <string name="num7">7</string>
    <string name="num8">8</string>
    <string name="num9">9</string>
    <string name="AC">AC</string>
    <string name="Suma">+</string>
    <string name="Resta">-</string>
    <string name="Multiplicacion">X</string>
    <string name="Division">/</string>
    <string name="Igual">=</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="API_KEY">AIzaSyDd6XB-ieuO5rTz9usLZp_PgwtX4cL9pyo</string>
</resources>