<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/BtnBaseDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BaseDatos"/>

    <Button
        android:id="@+id/BtnGraficos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Graficos"/>

    <Button
        android:id="@+id/BtnAnimacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Animacion"/>

    <Button
        android:id="@+id/BtnCalculadora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Calculadora"/>

    <Button
        android:id="@+id/BtnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Salir"/>

</LinearLayout>